Styling the mobile version of the homepage
Scaling the catalog image on hover.
Good css style for .catalog-item__img
{
    filter: brightness(90%)
}
Styling the mobile version of the homepage - section "philosophy"

--- a/index.html
+++ b/index.html
@@ -170,32 +170,55 @@
                     </div>
                     <div class="philosophy__list">
                         <div class="philosophy__item">
-                            <h3 class="our-philosophy__item__title">
-                                Следование традициям
-                            </h3>
-                            <p class="our-philosophy__item__p">
-                                Последовая примеру отца, который занимался
-                                ремотом обуви, мы реши создать первый кошелек.
-                            </p>
+                            <img
+                                src="img/tradition.jpg"
+                                alt=""
+                                class="philosophy__item__img"
+                            />
+                            <div class="philosophy__item__text">
+                                <h3 class="philosophy__item__title">
+                                    Следование традициям
+                                </h3>
+                                <p class="philosophy__item__p">
+                                    Последовая примеру отца, который занимался
+                                    ремотом обуви, мы реши создать первый
+                                    кошелек.
+                                </p>
+                            </div>
                         </div>
-                        <div class="our-philosophy__item">
-                            <h3 class="our-philosophy__item__title">
-                                Внимание к деталям
-                            </h3>
-                            <p class="our-philosophy__item__p">
-                                Мы устремили свое внимание на простоту и дизайн
-                                изделий, при этом не перегружаем их излишней
-                                функциональностью
-                            </p>
+                        <div class="philosophy__item">
+                            <img
+                                src="img/attention_to_detail.jpg"
+                                alt=""
+                                class="philosophy__item__img"
+                            />
+                            <div class="philosophy__item__text">
+                                <h3 class="philosophy__item__title">
+                                    Внимание к деталям
+                                </h3>
+                                <p class="philosophy__item__p">
+                                    Мы устремили свое внимание на простоту и
+                                    дизайн изделий, при этом не перегружаем их
+                                    излишней функциональностью
+                                </p>
+                            </div>
                         </div>
-                        <div class="our-philosophy__item">
-                            <h3 class="our-philosophy__item__title">
-                                Профессионализм
-                            </h3>
-                            <p class="our-philosophy__item__p">
-                                Чтобы перенять весь опыт и мастерство предков,
-                                потребовалось несколько лет обучения и практики.
-                            </p>
+                        <div class="philosophy__item">
+                            <img
+                                src="img/professionalism.jpg"
+                                alt=""
+                                class="philosophy__item__img"
+                            />
+                            <div class="philosophy__item__text">
+                                <h3 class="philosophy__item__title">
+                                    Профессионализм
+                                </h3>
+                                <p class="philosophy__item__p">
+                                    Чтобы перенять весь опыт и мастерство
+                                    предков, потребовалось несколько лет
+                                    обучения и практики.
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
