Styling the mobile version of the homepage
Completed CSS styling 'ADVANTAGES' block of the main pag.
Completed CSS styling 'SERVICES' block of the main pag.

--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
                 <nav class="nav">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="#" class="nav__item__link">Главная</a>
+                            <a href="#" class="nav__item-link">Главная</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#" class="nav__item__link">Катлог</a>
+                            <a href="#" class="nav__item-link">Катлог</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#" class="nav__item__link">Блог</a>
+                            <a href="#" class="nav__item-link">Блог</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#" class="nav__item__link">Информация</a>
+                            <a href="#" class="nav__item-link">Информация</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#" class="nav__item__link">Контакты</a>
+                            <a href="#" class="nav__item-link">Контакты</a>
                         </li>
                     </ul>
                 </nav>
@@ -173,13 +173,13 @@
                             <img
                                 src="img/tradition.jpg"
                                 alt=""
-                                class="philosophy__item__img"
+                                class="philosophy__item-img"
                             />
-                            <div class="philosophy__item__text">
-                                <h3 class="philosophy__item__title">
+                            <div class="philosophy__item-text">
+                                <h3 class="philosophy__item-title">
                                     Следование традициям
                                 </h3>
-                                <p class="philosophy__item__p">
+                                <p class="philosophy__item-p">
                                     Последовая примеру отца, который занимался
                                     ремотом обуви, мы реши создать первый
                                     кошелек.
@@ -190,13 +190,13 @@
                             <img
                                 src="img/attention_to_detail.jpg"
                                 alt=""
-                                class="philosophy__item__img"
+                                class="philosophy__item-img"
                             />
-                            <div class="philosophy__item__text">
-                                <h3 class="philosophy__item__title">
+                            <div class="philosophy__item-text">
+                                <h3 class="philosophy__item-title">
                                     Внимание к деталям
                                 </h3>
-                                <p class="philosophy__item__p">
+                                <p class="philosophy__item-p">
                                     Мы устремили свое внимание на простоту и
                                     дизайн изделий, при этом не перегружаем их
                                     излишней функциональностью
@@ -207,13 +207,13 @@
                             <img
                                 src="img/professionalism.jpg"
                                 alt=""
-                                class="philosophy__item__img"
+                                class="philosophy__item-img"
                             />
-                            <div class="philosophy__item__text">
-                                <h3 class="philosophy__item__title">
+                            <div class="philosophy__item-text">
+                                <h3 class="philosophy__item-title">
                                     Профессионализм
                                 </h3>
-                                <p class="philosophy__item__p">
+                                <p class="philosophy__item-p">
                                     Чтобы перенять весь опыт и мастерство
                                     предков, потребовалось несколько лет
                                     обучения и практики.
@@ -222,7 +222,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- 
                 <div class="services">
                     <div class="h2">
                         <h2 class="h2__title">Дополнительные услуги</h2>
@@ -233,9 +232,9 @@
                             <img
                                 src="img/choice_leather_and_accessories.jpg"
                                 alt="Выбор кожи и фурнитуры"
-                                class="services__item__img"
+                                class="services__item-img"
                             />
-                            <p class="services__item__p">
+                            <p class="services__item-p">
                                 Выбор кожи и фурнитуры
                             </p>
                         </div>
@@ -243,20 +242,21 @@
                             <img
                                 src="img/drawing_picture.jpg"
                                 alt="Нанесение рисунка"
-                                class="services__item__img"
+                                class="services__item-img"
                             />
-                            <p class="services__item__p">Нанесение рисунка</p>
+                            <p class="services__item-p">Нанесение рисунка</p>
                         </div>
                         <div class="services__item">
                             <img
                                 src="img/personalization.jpg"
                                 alt="Персонализация"
-                                class="services__item__img"
+                                class="services__item-img"
                             />
-                            <p class="services__item__p">Персонализация</p>
+                            <p class="services__item-p">Персонализация</p>
                         </div>
                     </div>
                 </div>
+                
                 <div class="advantages">
                     <div class="h2">
                         <h2 class="h2__title">Наши преимущества</h2>
@@ -267,37 +267,37 @@
                             <img
                                 src="img/handmade.svg"
                                 alt="Ручная работа"
-                                class="advantages__item__img"
+                                class="advantages__item-img"
                             />
-                            <p class="advantages__item__p">Ручная работа</p>
+                            <p class="advantages__item-p">Ручная работа</p>
                         </li>
                         <li class="advantages__item">
                             <img
                                 src="img/genuine_leather.svg"
                                 alt="Только натуральная кожа"
-                                class="advantages__item__img"
+                                class="advantages__item-img"
                             />
-                            <p class="advantages__item__p">
+                            <p class="advantages__item-p">
                                 Только натуральная кожа
                             </p>
                         </li>
-                        <li class="advantages__item">
+                        <!-- <li class="advantages__item">
                             <img
                                 src="img/individual_approach.svg"
                                 alt="Индивидуальный подход"
-                                class="advantages__item__img"
+                                class="advantages__item-img"
                             />
-                            <p class="advantages__item__p">
+                            <p class="advantages__item-p">
                                 Индивидуальный подход
                             </p>
-                        </li>
+                        </li> -->
                         <li class="advantages__item">
                             <img
                                 src="img/great_experience.svg"
                                 alt="Большой опыт работы с кожей"
-                                class="advantages__item__img"
+                                class="advantages__item-img"
                             />
-                            <p class="advantages__item__p">
+                            <p class="advantages__item-p">
                                 Большой опыт работы с кожей
                             </p>
                         </li>
@@ -305,14 +305,14 @@
                             <img
                                 src="img/delivery.svg"
                                 alt="Доставка в любую точку"
-                                class="advantages__item__img"
+                                class="advantages__item-img"
                             />
-                            <p class="advantages__item__p">
+                            <p class="advantages__item-p">
                                 Доставка в любую точку
                             </p>
                         </li>
                     </ul>
-                </div> -->
+                </div>
             </div>
         </section>
         <!-- 
