--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                         </div>
                     </div>
                 </div>
-                
+
                 <div class="advantages">
                     <div class="h2">
                         <h2 class="h2__title">Наши преимущества</h2>
@@ -315,41 +315,49 @@
                 </div>
             </div>
         </section>
-        <!-- 
+
         <footer class="footer">
-            <div class="logo footer__logo">
-                <a href="" class="logo__link">
-                    <img
-                        src="img/logo_qualitas_leather.svg"
-                        alt="Логотип qualitas leather"
-                        class="logo__img"
-                    />
-                </a>
+            <div class="container container-footer">
+                <div class="logo footer__logo">
+                    <a href="" class="logo__link">
+                        <img
+                            src="img/logo_qualitas_leather.svg"
+                            alt="Логотип qualitas leather"
+                            class="logo__img"
+                        />
+                    </a>
+                </div>
                 <div class="gray-line"></div>
                 <div class="contacts">
                     <ul class="contacts__list">
                         <li class="contacts__item">
-                            <a href="tel:+79896307755">
+                            <a
+                                href="tel:+79896307755"
+                                class="contacts__item-link"
+                            >
                                 <img
                                     src="img/call.svg"
                                     alt="Звонок"
-                                    class="contacts__item__img"
+                                    class="contacts__item-img"
                                 />
-                                <p class="contacts__item__p">Звонок</p>
-                                <p class="contacts__item__p">
+                                <p class="contacts__item-p">Звонок</p>
+                                <p class="contacts__item-p">
                                     + 7 (977) 012-90-15
                                 </p>
                             </a>
                         </li>
                         <li class="contacts__item">
-                            <a href="https://t.me/+79896307755">
+                            <a
+                                href="https://t.me/+79896307755"
+                                class="contacts__item-link"
+                            >
                                 <img
                                     src="img/telegram.svg"
                                     alt="Telegram"
-                                    class="contacts__item__img"
+                                    class="contacts__item-img"
                                 />
-                                <p class="contacts__item__p">Telegram</p>
-                                <p class="contacts__item__p">
+                                <p class="contacts__item-p">Telegram</p>
+                                <p class="contacts__item-p">
                                     + 7 (977) 012-90-15
                                 </p>
                             </a>
@@ -357,14 +365,15 @@
                         <li class="contacts__item">
                             <a
                                 href="https://www.instagram.com/qualitas_leather/"
+                                class="contacts__item-link"
                             >
                                 <img
                                     src="img/instagram.svg"
                                     alt="Instagram"
-                                    class="contacts__item__img"
+                                    class="contacts__item-img"
                                 />
-                                <p class="contacts__item__p">Instagram</p>
-                                <p class="contacts__item__p">
+                                <p class="contacts__item-p">Instagram</p>
+                                <p class="contacts__item-p">
                                     #qualitas_leather
                                 </p>
                             </a>
@@ -381,6 +390,6 @@
                     </p>
                 </div>
             </div>
-        </footer> -->
+        </footer>
     </body>
 </html>
