Styling the tablet adn the desktop version of the homepage
Made adaptive styles for all resolutions except large and very large screens

--- a/index.html
+++ b/index.html
@@ -26,25 +26,46 @@
                     <ul class="nav__list">
                         <li class="nav__item">
                             <a href="#" class="nav__item-link">Главная</a>
+                            <span
+                                class="title-underline nav-title-underline"
+                            ></span>
                         </li>
                         <li class="nav__item">
-                            <a href="#" class="nav__item-link">Катлог</a>
+                            <div class="nav-link__container">
+                                <a href="#" class="nav__item-link">Каталог</a>
+                                <div class="triangle"></div>
+                            </div>
+                            <span
+                                class="title-underline nav-title-underline"
+                            ></span>
                         </li>
                         <li class="nav__item">
                             <a href="#" class="nav__item-link">Блог</a>
+                            <span
+                                class="title-underline nav-title-underline"
+                            ></span>
                         </li>
                         <li class="nav__item">
-                            <a href="#" class="nav__item-link">Информация</a>
+                            <div class="nav-link__container">
+                                <a href="#" class="nav__item-link">Информация</a>
+                                <div class="triangle"></div>
+                            </div>
+                            <span
+                                class="title-underline nav-title-underline"
+                            ></span>
                         </li>
                         <li class="nav__item">
                             <a href="#" class="nav__item-link">Контакты</a>
+                            <span
+                                class="title-underline nav-title-underline"
+                            ></span>
                         </li>
                     </ul>
                 </nav>
             </div>
             <div class="container">
-                <div class="h1">
-                    <h1 class="h1__title">
+                <div class="h1 h1-main-page">
+                    <h1 class="h1__title h1-title-main-page">
                         Мастерская кожаных изделий ручной работы
                     </h1>
                 </div>
@@ -56,7 +77,7 @@
                 <div class="catalog">
                     <div class="h2">
                         <h2 class="h2__title">Каталог</h2>
-                        <span class="h2__underline"></span>
+                        <span class="title-underline"></span>
                     </div>
                     <ul class="catalog__list">
                         <li class="catalog-item">
@@ -166,7 +187,7 @@
                 <div class="philosophy">
                     <div class="h2">
                         <h2 class="h2__title">Наша философия</h2>
-                        <span class="h2__underline"></span>
+                        <span class="title-underline"></span>
                     </div>
                     <div class="philosophy__list">
                         <div class="philosophy__item">
@@ -225,7 +246,7 @@
                 <div class="services">
                     <div class="h2">
                         <h2 class="h2__title">Дополнительные услуги</h2>
-                        <span class="h2__underline"></span>
+                        <span class="title-underline"></span>
                     </div>
                     <div class="services__list">
                         <div class="services__item">
@@ -260,7 +281,7 @@
                 <div class="advantages">
                     <div class="h2">
                         <h2 class="h2__title">Наши преимущества</h2>
-                        <span class="h2__underline"></span>
+                        <span class="title-underline"></span>
                     </div>
                     <ul class="advantages__list">
                         <li class="advantages__item">
