Styling the desktop version of the homepage (1200px)

--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
                                     Следование традициям
                                 </h3>
                                 <p class="philosophy__item-p">
-                                    Последовая примеру отца, который занимался
-                                    ремотом обуви, мы реши создать первый
+                                    Последовав примеру отца, который занимался
+                                    ремонтом обуви, мы решили создать первый
                                     кошелек.
                                 </p>
                             </div>
