--- a/index.html
+++ b/index.html
@@ -38,6 +38,48 @@
                             <span
                                 class="title-underline nav-title-underline"
                             ></span>
+                            <ul class="sub-nav__list">
+                                <li class="sub-nav__item">
+                                    <a href="" class="sub-nav__item-link"
+                                        >Ремни</a
+                                    >
+                                </li>
+                                <li class="sub-nav__item">
+                                    <a href="" class="sub-nav__item-link"
+                                        >Ремешки для часов</a
+                                    >
+                                </li>
+                                <li class="sub-nav__item">
+                                    <a href="" class="sub-nav__item-link"
+                                        >Картхолдеры</a
+                                    >
+                                </li>
+                                <li class="sub-nav__item">
+                                    <a href="" class="sub-nav__item-link"
+                                        >Обложки для паспорта</a
+                                    >
+                                </li>
+                                <li class="sub-nav__item">
+                                    <a href="" class="sub-nav__item-link"
+                                        >Чехлы для ручек</a
+                                    >
+                                </li>
+                                <li class="sub-nav__item">
+                                    <a href="" class="sub-nav__item-link"
+                                        >Зажимы для денег</a
+                                    >
+                                </li>
+                                <li class="sub-nav__item">
+                                    <a href="" class="sub-nav__item-link"
+                                        >Аксессуары</a
+                                    >
+                                </li>
+                                <li class="sub-nav__item">
+                                    <a href="" class="sub-nav__item-link"
+                                        >Другое</a
+                                    >
+                                </li>
+                            </ul>
                         </li>
                         <li class="nav__item">
                             <a href="#" class="nav__item-link">Блог</a>
@@ -47,12 +89,36 @@
                         </li>
                         <li class="nav__item">
                             <div class="nav-link__container">
-                                <a href="#" class="nav__item-link">Информация</a>
+                                <a href="#" class="nav__item-link"
+                                    >Информация</a
+                                >
                                 <div class="triangle"></div>
                             </div>
                             <span
                                 class="title-underline nav-title-underline"
                             ></span>
+                            <ul class="sub-nav__list">
+                                <li class="sub-nav__item">
+                                    <a href="" class="sub-nav__item-link"
+                                        >Способы доставки</a
+                                    >
+                                </li>
+                                <li class="sub-nav__item">
+                                    <a href="" class="sub-nav__item-link"
+                                        >Способы оплаты</a
+                                    >
+                                </li>
+                                <li class="sub-nav__item">
+                                    <a href="" class="sub-nav__item-link"
+                                        >О нас</a
+                                    >
+                                </li>
+                                <li class="sub-nav__item">
+                                    <a href="" class="sub-nav__item-link"
+                                        >Часто задаваемые вопросы</a
+                                    >
+                                </li>
+                            </ul>
                         </li>
                         <li class="nav__item">
                             <a href="#" class="nav__item-link">Контакты</a>
