--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                                 class="title-underline nav-title-underline"
                             ></span>
                         </li>
-                        <li class="nav__item">
+                        <li class="nav__item nav__item-click">
                             <div class="nav-link__container">
                                 <a href="#" class="nav__item-link">Каталог</a>
                                 <div class="triangle"></div>
@@ -87,7 +87,7 @@
                                 class="title-underline nav-title-underline"
                             ></span>
                         </li>
-                        <li class="nav__item">
+                        <li class="nav__item nav__item-click">
                             <div class="nav-link__container">
                                 <a href="#" class="nav__item-link"
                                     >Информация</a
@@ -479,4 +479,6 @@
             </div>
         </footer>
     </body>
+    <!-- Подключаем файл скриптов -->
+    <script src="js/script.js"></script>
 </html>
