Added a menu for the mobile version when clicking on a burger.
I stylized a drop-down window with a menu for the mobile version.
Wrote a handler for clicking on a burger and a window close button.
Rewrote the script for handling the event of clicking on the menu item (Catalog and Information).
When pressed, a submenu appears (a list of categories and information).
The script takes into account the type of device used (mobile or desktop) and works for both platforms.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                 <div class="burger">
                     <span class="burger__span"></span>
                 </div>
-                <nav class="nav">
+                <nav class="nav nav__display-none">
+                    <div class="close-button"></div>
                     <ul class="nav__list">
                         <li class="nav__item">
                             <a href="#" class="nav__item-link">Главная</a>
@@ -30,7 +31,7 @@
                                 class="title-underline nav-title-underline"
                             ></span>
                         </li>
-                        <li class="nav__item nav__item-click">
+                        <li class="nav__item">
                             <div class="nav-link__container">
                                 <a href="#" class="nav__item-link">Каталог</a>
                                 <div class="triangle"></div>
@@ -38,7 +39,7 @@
                             <span
                                 class="title-underline nav-title-underline"
                             ></span>
-                            <ul class="sub-nav__list">
+                            <ul class="sub-nav__list sub-nav__list-none">
                                 <li class="sub-nav__item">
                                     <a href="" class="sub-nav__item-link"
                                         >Ремни</a
@@ -87,7 +88,7 @@
                                 class="title-underline nav-title-underline"
                             ></span>
                         </li>
-                        <li class="nav__item nav__item-click">
+                        <li class="nav__item">
                             <div class="nav-link__container">
                                 <a href="#" class="nav__item-link"
                                     >Информация</a
@@ -97,7 +98,7 @@
                             <span
                                 class="title-underline nav-title-underline"
                             ></span>
-                            <ul class="sub-nav__list">
+                            <ul class="sub-nav__list sub-nav__list-none">
                                 <li class="sub-nav__item">
                                     <a href="" class="sub-nav__item-link"
                                         >Способы доставки</a
@@ -481,4 +482,5 @@
     </body>
     <!-- Подключаем файл скриптов -->
     <script src="js/script.js"></script>
+    <script src="js/jquery-3.6.3.slim.min.js"></script>
 </html>
